--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-cffi==1.14.4
+cffi~=1.14.3
 click==7.1.2
 cryptography==3.2.1
 Flask==1.1.2
@@ -16,3 +16,12 @@ tornado==6.1
 Werkzeug==1.0.1
 zope.event==4.5.0
 zope.interface==5.2.0
+
+scikit-learn~=0.23.1
+pip~=20.1.1
+wheel~=0.34.2
+coverage~=5.3
+numpy~=1.19.4
+pytest~=6.1.2
+ply~=3.11
+setuptools~=49.2.0
